Small fix for dark mode styling

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -57,6 +57,7 @@
 .cell input {
     font-size: 1.5rem;
     text-align: center;
+    color: #000;
     padding: 0;
     border: 0 none;
     position: absolute;
@@ -110,6 +111,9 @@
 .dark-mode .cell-column-2,
 .dark-mode .cell-column-5 {
     border-right-color: #d6d6d6;
+}
+.dark-mode .cell input {
+    color: #d6d6d6;
 }
 .dark-mode .highlight-givens .given {
     background-color: #282828;
